# Legacy

./: data200.json  data2k.json  execution_time.txt  gemma.py  gemma1.py  processed_obituaries2k.json  processed_obituaries2kgemma.json  processed_obituariescpu only.json  pyproject.toml  readme.md  script.py  subset_generator.py  test2.py
